flux/apps/nextcloud/mariadb_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: primary
spec:
  serviceName: mariadb
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mariadb
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/component: primary
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mariadb
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/component: primary
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.9
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
          name: mysql
        livenessProbe:
          exec:
            command: ["sh", "-c", "exec mariadb-admin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command: ["sh", "-c", "exec mariadb-admin status -uroot -p$MARIADB_ROOT_PASSWORD"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: mariadb-data
          mountPath: /var/lib/mysql/
  volumeClaimTemplates:
  - metadata:
      name: mariadb-data
    spec:
      storageClassName: "nfs-client"
      accessModes: 
      - "ReadWriteOnce"
      resources:
        requests:
          storage: 1Gi
