flux/apps/nextcloud/nextcloud_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/component: app
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:27.0.0-apache
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: "nextcloud.reisman.org"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: "nextcloud.reisman.org"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        resources: {}
        volumeMounts:
        - name: html-root
          mountPath: /var/www/html
        - name: data
          mountPath: /var/www/html/data
          subPath: data
        - mountPath: /var/www/html/config
          name: config
          subPath: config
        # - mountPath: /var/www/html/custom_apps
        #   name: customapps
      - name: html-sync
        image: alpine:latest
        imagePullPolicy: Always
        command: [ "/bin/sh", "-c" ]
        args: [ "apk update; apk add --upgrade rsync; while true; do rsync -rlptv --exclude={'config','data'} --delete /html-root/ /html-persist; sleep 60; done" ]
        resources: {}
        volumeMounts:
          - mountPath: /html-persist
            name: html-persist
          - mountPath: /html-root
            name: html-root 
      volumes:
      - name: html-root
        emptyDir: {}
      - name: html-persist
        persistentVolumeClaim:
          claimName: html-pvc
      - name: config
        persistentVolumeClaim:
          claimName: config-pvc
      - name: customapps
        persistentVolumeClaim:
          claimName: customapps-pvc
      - name: data
        persistentVolumeClaim:
          claimName: data-pvc
      # Will mount configuration files as www-data (id: 33) for nextcloud
      securityContext:
        fsGroup: 33
      serviceAccountName: nextcloud-serviceaccount
