flux/apps/nextcloud/mariadb_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 3306
    name: mysql
  selector:
    app.kubernetes.io/name: mariadb
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: primary
