flux/apps/nextcloud/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: redis
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 6379
    name: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: redis
